--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-flip-move": "^3.0.3",
     "react-js-pagination": "^3.0.2",
     "throttle-debounce": "^2.1.0",
-    "react-css-transition-replace": "^3.0.3"
+    "react-css-transition-replace": "^3.0.3",
+    "react-stomp": "^4.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -37,7 +38,6 @@
     "not ie <= 11",
     "not op_mini all"
   ],
-  "proxy": "http://localhost:8080",
   "devDependencies": {
     "@types/react-router-bootstrap": "^0.24.5",
     "@types/react-transition-group": "^2.0.16"
