--- a/package.json
+++ b/package.json
@@ -3,25 +3,25 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
-    "react": ">=16.8.6",
-    "react-dom": ">=16.8.6",
-    "react-scripts": ">=2.1.8",
-    "react-router-dom": ">=5.0.0",
-    "react-bootstrap": ">=1.0.0-beta.6",
-    "react-router-bootstrap": "^0.25.0",
     "bootstrap": "^4.3.1",
-    "react-moment": "^0.8.4",
     "moment": "^2.24.0",
-    "react-cookie-consent": "^2.2.2",
-    "react-transition-group": "^2.8.0",
-    "react-icons": "^3.5.0",
+    "react": "^16.9.0",
     "react-autosuggest": "^9.4.3",
     "react-beautiful-dnd": "^10.1.1",
-    "react-flip-move": "^3.0.3",
-    "react-js-pagination": "^3.0.2",
-    "throttle-debounce": "^2.1.0",
+    "react-bootstrap": "^1.0.0-beta.11",
+    "react-cookie-consent": "^2.4.1",
     "react-css-transition-replace": "^3.0.3",
-    "react-stomp": "^4.1.1"
+    "react-dom": "^16.9.0",
+    "react-flip-move": "^3.0.3",
+    "react-icons": "^3.7.0",
+    "react-js-pagination": "^3.0.2",
+    "react-moment": "^0.8.4",
+    "react-router-bootstrap": "^0.25.0",
+    "react-router-dom": "^5.0.1",
+    "react-scripts": "^3.1.1",
+    "react-stomp": "^4.1.1",
+    "react-transition-group": "^2.9.0",
+    "throttle-debounce": "^2.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -40,6 +40,6 @@
   ],
   "devDependencies": {
     "@types/react-router-bootstrap": "^0.24.5",
-    "@types/react-transition-group": "^2.0.16"
+    "@types/react-transition-group": "^2.9.2"
   }
 }
