--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
     "react-icons": "^3.7.0",
     "react-js-pagination": "^3.0.2",
     "react-moment": "^0.8.4",
-    "react-router-bootstrap": "^0.25.0",
+    "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
+    "react-router-bootstrap": "^0.25.0",
     "react-scripts": "^3.2.0",
     "react-stomp": "^4.2.0",
     "react-transition-group": "^2.9.0",
