--- a/package.json
+++ b/package.json
@@ -5,20 +5,21 @@
   "dependencies": {
     "bootstrap": "^4.3.1",
     "moment": "^2.24.0",
-    "react": "^16.10.1",
+    "react": "^16.10.2",
+    "react-app-polyfill": "^1.0.4",
     "react-autosuggest": "^9.4.3",
     "react-beautiful-dnd": "^10.1.1",
-    "react-bootstrap": "^1.0.0-beta.12",
+    "react-bootstrap": "^1.0.0-beta.14",
     "react-cookie-consent": "^2.5.0",
     "react-css-transition-replace": "^3.0.3",
-    "react-dom": "^16.10.1",
+    "react-dom": "^16.10.2",
     "react-flip-move": "^3.0.3",
     "react-icons": "^3.7.0",
     "react-js-pagination": "^3.0.2",
     "react-moment": "^0.8.4",
     "react-router": "^5.1.2",
-    "react-router-dom": "^5.1.2",
     "react-router-bootstrap": "^0.25.0",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "^3.2.0",
     "react-stomp": "^4.2.0",
     "react-transition-group": "^2.9.0",
@@ -33,14 +34,21 @@
   "eslintConfig": {
     "extends": "react-app"
   },
-  "browserslist": [
-    ">1%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ],
+  "browserslist": {
+    "production": [
+      ">0.5%",
+      "not dead",
+      "not ie <= 10",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
   "devDependencies": {
-    "@types/react": "^16.9.4",
+    "@types/react": "^16.9.5",
     "@types/react-dom": "^16.9.1",
     "@types/react-router-bootstrap": "^0.24.5",
     "@types/react-transition-group": "^2.9.2"
