--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
+    "autoprefixer": "^9.6.1",
     "bootstrap": "^4.3.1",
     "moment": "^2.24.0",
     "react": "^16.10.2",
