--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "react-router": "^5.1.2",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "^3.3.0",
+    "react-scripts": "~3.2.0||>3.3.0",
     "react-stomp": "^4.2.0",
     "react-transition-group": "^2.9.0",
     "source-map-explorer": "^2.1.2",
