--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-icons": "^3.8.0",
     "react-js-pagination": "^3.0.2",
     "react-moment": "^0.8.4",
+    "react-player-controls": "^1.1.0",
     "react-router": "^5.1.2",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.1.2",
