--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "bootstrap": "^4.5.0",
     "jquery": "^3.5.1",
     "moment": "^2.26.0",
+    "moment-duration-format": "^2.3.2",
     "popper.js": "^1.16.1",
     "react": "^16.13.1",
     "react-app-polyfill": "^1.0.6",
