--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
+    "@react-keycloak/web": "^2.1.4",
     "autoprefixer": "^9.8.5",
     "bootstrap": "^4.5.0",
     "jquery": "^3.5.1",
+    "keycloak-js": "^11.0.2",
+    "md5": "^2.3.0",
     "moment": "^2.27.0",
     "moment-duration-format": "^2.3.2",
     "popper.js": "^1.16.1",
@@ -32,7 +35,7 @@
     "typescript": "^3.9.7"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "set HTTPS=true&&react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
