--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.0",
-    "react-stomp": "^5.0.0",
+    "react-stomp-hooks": "^1.1.0",
     "react-transition-group": "^4.4.1",
     "source-map-explorer": "^2.4.2",
     "throttle-debounce": "^2.2.1",
