--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "private": true,
   "dependencies": {
     "@react-keycloak/web": "^3.4.0",
-    "autoprefixer": "^10.2.1",
-    "bootstrap": "^4.5.3",
+    "autoprefixer": "^10.2.3",
+    "bootstrap": "^4.6.0",
     "jquery": "^3.5.1",
-    "keycloak-js": "^12.0.1",
+    "keycloak-js": "^12.0.2",
     "md5": "^2.3.0",
     "moment": "^2.29.1",
     "moment-duration-format": "^2.3.2",
@@ -35,7 +35,7 @@
     "typescript": "^4.1.3"
   },
   "scripts": {
-    "start": "set HTTPS=true&&react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
