--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "typescript": "^4.3.5"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "set HTTPS=true&&react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
