--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "moment-duration-format": "^2.3.2",
     "popper.js": "^1.16.1",
     "react": "^17.0.2",
-    "react-app-polyfill": "^3.0.0",
     "react-autosuggest": "^10.1.0",
     "react-beautiful-dnd": "^13.1.0",
     "react-bootstrap": "^1.6.1",
@@ -43,19 +42,9 @@
   "eslintConfig": {
     "extends": "react-app"
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not ie <= 10",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
+  "browserslist": [
+    "defaults"
+  ],
   "devDependencies": {
     "react-scripts": "^4.0.3",
     "@types/react": "^17.0.19",
