--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "typescript": "^4.6.3"
   },
   "scripts": {
-    "start": "set HTTPS=true&&react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
@@ -45,9 +45,9 @@
     "defaults"
   ],
   "devDependencies": {
-    "react-scripts": "^4.0.3",
     "@types/react": "^17.0.19",
     "@types/react-dom": "^17.0.14",
-    "@types/react-router-bootstrap": "^0.24.5"
+    "@types/react-router-bootstrap": "^0.24.5",
+    "react-scripts": "^5.0.0"
   }
 }
