--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -1,5 +1,14 @@
 {
   "extends": [
     "github>fallobst22/renovate-config"
+  ],
+  "packageRules": [
+    {
+      "matchPackageNames": [
+        "react-router",
+        "react-router-dom"
+      ],
+      "allowedVersions": "<6.0.0"
+    }
   ]
 }
