:arrow_down: Fix @types/react versions

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -13,7 +13,9 @@
     {
       "matchPackageNames": [
         "react",
-        "react-dom"
+        "react-dom",
+        "@types/react",
+        "@types/react-dom"
       ],
       "allowedVersions": "<18.0.0"
     }
