:arrow_down: Restrict react-router-bootstrap version

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -18,6 +18,12 @@
         "@types/react-dom"
       ],
       "allowedVersions": "<18.0.0"
+    },
+    {
+      "matchPackageNames": [
+        "react-router-bootstrap"
+      ],
+      "allowedVersions": "<0.26.0"
     }
   ]
 }
