--- a/package.json
+++ b/package.json
@@ -31,10 +31,9 @@
     "typescript": "4.9.5"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
+    "start": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
     "analyze": "source-map-explorer 'build/static/js/*.js'"
   },
   "eslintConfig": {
@@ -47,6 +46,9 @@
     "@types/react": "17.0.58",
     "@types/react-dom": "17.0.19",
     "@types/react-router-bootstrap": "0.26.0",
-    "react-scripts": "5.0.1"
+    "@vitejs/plugin-basic-ssl": "^1.0.1",
+    "@vitejs/plugin-react": "^4.0.0",
+    "vite": "^4.3.3",
+    "vite-plugin-svgr": "^2.4.0"
   }
 }
