--- a/package.json
+++ b/package.json
@@ -6,14 +6,13 @@
     "@react-keycloak/web": "3.4.0",
     "autoprefixer": "10.4.17",
     "bootstrap": "5.3.2",
-    "jquery": "3.7.1",
+    "downshift": "^8.3.1",
     "keycloak-js": "23.0.6",
     "md5": "2.3.0",
     "moment": "2.30.1",
     "moment-duration-format": "2.3.2",
     "popper.js": "1.16.1",
     "react": "17.0.2",
-    "react-autosuggest": "10.1.0",
     "react-beautiful-dnd": "13.1.1",
     "react-bootstrap": "2.10.1",
     "react-cookie-consent": "9.0.0",
