chore: Migrate from react-keycloak to react-oidc-context

--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
-REACT_APP_CHROME_EXTENSION_ID=ndlcpjfpedfkcnhgibfahapkfajedklf
+VITE_CHROME_EXTENSION_ID=ndlcpjfpedfkcnhgibfahapkfajedklf
+VITE_OIDC_AUTHORITY=https://id.elite12.de/realms/elite12
+VITE_OIDC_CLIENT_ID=musikbot-frontend
+VITE_BACKEND_CLIENT_ID=musikbot-backend
