--- a/package.json
+++ b/package.json
@@ -3,11 +3,9 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
-    "@react-keycloak/web": "3.4.0",
     "autoprefixer": "10.4.19",
     "bootstrap": "5.3.3",
     "downshift": "^9.0.0",
-    "keycloak-js": "24.0.5",
     "md5": "2.3.0",
     "moment": "2.30.1",
     "moment-duration-format": "2.3.2",
@@ -20,6 +18,7 @@
     "react-flip-move": "3.0.5",
     "react-icons": "5.2.1",
     "react-moment": "1.1.3",
+    "react-oidc-context": "3.1.0",
     "react-router": "5.3.4",
     "react-router-bootstrap": "0.25.0",
     "react-router-dom": "5.3.4",
