--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -2,28 +2,5 @@
   "extends": [
     "github>fallobst22/renovate-config"
   ],
-  "packageRules": [
-    {
-      "matchPackageNames": [
-        "react-router",
-        "react-router-dom"
-      ],
-      "allowedVersions": "<6.0.0"
-    },
-    {
-      "matchPackageNames": [
-        "react",
-        "react-dom",
-        "@types/react",
-        "@types/react-dom"
-      ],
-      "allowedVersions": "<18.0.0"
-    },
-    {
-      "matchPackageNames": [
-        "react-router-bootstrap"
-      ],
-      "allowedVersions": "<0.26.0"
-    }
-  ]
+  "packageRules": []
 }
