--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "private": true,
   "type": "module",
   "dependencies": {
+    "@dnd-kit/core": "6.3.1",
+    "@dnd-kit/modifiers": "9.0.0",
+    "@dnd-kit/sortable": "10.0.0",
+    "@dnd-kit/utilities": "3.2.2",
     "autoprefixer": "10.4.20",
     "bootstrap": "5.3.3",
     "downshift": "^9.0.0",
