--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@dnd-kit/modifiers": "9.0.0",
     "@dnd-kit/sortable": "10.0.0",
     "@dnd-kit/utilities": "3.2.2",
+    "animejs": "3.2.2",
     "autoprefixer": "10.4.20",
     "bootstrap": "5.3.3",
     "downshift": "^9.0.0",
@@ -18,6 +19,7 @@
     "react-bootstrap": "2.10.7",
     "react-cookie-consent": "9.0.0",
     "react-dom": "18.3.1",
+    "react-flip-toolkit": "7.2.4",
     "react-icons": "5.4.0",
     "react-moment": "1.1.3",
     "react-oidc-context": "3.2.0",
